# Edit-As-Act

./: README.md  pyproject.toml
cli/: __init__.py  benchmark.py  derive_terminal.py  execute_plan.py  plan_from_goal.py
editors/: __init__.py  editlang.py  editlang_std.yaml
errors/: __init__.py  planner_error.py
planners/: __init__.py  regression_planner.py  schema_validation.py
runner/: __init__.py  execute_plan.py
tools/: apply_plan_to_scene.py  blender_scene_export.py  blender_scene_import.py  llm_helpers.py
utils/: __init__.py  coords.py  logging_utils.py
validators/: __init__.py  geom_checker.py  llm_semantic_validator.py
